test/error/parser_files/type_as_binding03.st
f ((type, x), y) := g ().

